javascript add class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="carousel">
             <i id="prev" class="fa-solid fa-arrow-left"></i>
             <div class="gallery">
-                <img src="img/01.webp" class="active" alt="spiderman">
+                <img src="img/01.webp" alt="spiderman">
                 <img src="img/02.webp" alt="spiderman">
                 <img src="img/03.webp" alt="spiderman">
                 <img src="img/04.webp" alt="spiderman">
