--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div id="carousel">
             <i id="prev" class="fa-solid fa-arrow-left"></i>
             <div class="gallery">
-                <img src="img/01.webp" alt="spiderman">
+                <!-- <img src="img/01.webp" alt="spiderman">
                 <img src="img/02.webp" alt="spiderman">
                 <img src="img/03.webp" alt="spiderman">
                 <img src="img/04.webp" alt="spiderman">
-                <img src="img/05.webp" alt="spiderman">
+                <img src="img/05.webp" alt="spiderman"> -->
             </div>
             <i id="next" class="fa-solid fa-arrow-right"></i>
         </div>
