--- a/index.html
+++ b/index.html
@@ -17,17 +17,11 @@
     <div class="container">
         <div id="carousel">
             <i id="prev" class="fa-solid fa-arrow-left"></i>
-            <div class="gallery">
-                
-            </div>
+            <div class="gallery"></div>
             <i id="next" class="fa-solid fa-arrow-right"></i>
         </div>
-        <div id="tumb">
-            <img src="img/01.webp" alt="spiderman">
-            <img src="img/02.webp" alt="spiderman">
-            <img src="img/03.webp" alt="spiderman">
-            <img src="img/04.webp" alt="spiderman">
-            <img src="img/05.webp" alt="spiderman">
+        <div id="thumb">
+            
         </div>
     </div>
     <script src="js/script.js"></script>
